crucible-syntax/test-data/simulator-tests/assume.out.good
==== Begin Simulation ====

==== Finish Simulation ====
==== Proof obligations ====
Assuming:
* in main test-data/simulator-tests/assume.cbl:4:5: x is true
    cx@0:b
Prove:
  test-data/simulator-tests/assume.cbl:5:5: error: in main
  error statement
  false
COUNTEREXAMPLE
